Add migration guide to toxtree, improve how-to titles

--- a/docs/how_tos/02_converters_for_optimization_problems.ipynb
+++ b/docs/how_tos/02_converters_for_optimization_problems.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Converters for OptimizationProblem\n",
+    "# Convert between formulations of an `OptimizationProblem`\n",
+    "\n",
     "## Overview\n",
     "This module provides various converters to transform optimization problems into different forms.\n",
     "These converters can be used to change variable types, objective functions, and constraints.\n",
